fix: mobile compliability and suggestion alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -177,7 +177,7 @@ main button i {
     position: relative;
     height: 2em;
     border-radius: 1em;
-    padding: 0 1em;
+    padding: 0 2em 0 1em;
     background: #e3e3e3;
     backdrop-filter: blur(2em);
     text-overflow: ellipsis;
@@ -242,5 +242,8 @@ main button i {
     }
     main .form div {
         width: 60vw;
+    }
+    body {
+        grid-template-rows: 3em 1fr 0;
     }
 }
